deploy-amarillo-rojo-ingress.yml
#demo-ingress.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: amarillo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      role: amarillo-app
  template:
    metadata:
      labels:
        role: amarillo-app
    spec:
      containers:
      - name: amarillo-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rojo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      role: rojo-app
  template:
    metadata:
      labels:
        role: rojo-app
    spec:
      containers:
      - name: rojo-app
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: amarillo-svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: amarillo-app

---
apiVersion: v1
kind: Service
metadata:
  name: rojo-svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: rojo-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /amarillo
        pathType: Prefix
        backend:
          service:
            name: amarillo-svc
            port:
              number: 8080
      - path: /rojo
        pathType: Prefix
        backend:
          service:
            name: rojo-svc
            port:
              number: 8080
